@@ -6,6 +6,7 @@ Changes since Elementary 1.7.5:
 Fixes:
 
    * Fix omitting signal emission when customized text parts change the text.
+   * Fix the bug which the callbacks of the sub-object are added even if the sub-object is added the parent object.
 
 Changes since Elementary 1.7.4:
 -------------------------
